# gmu_objects

./: CMakeLists.txt  Info copie.plist  bufGranul2~_DSP.c
.svn/text-base/: bufGranul2~.c.svn-base
DerivedData/bufGranul~/: scm.plist
DerivedData/bufGranul~/Index/Development/My Mac 64-bit/bufGranul~.xcindex/: db.xcindexdb  (+2 more)
DerivedData/bufGranul~/TextIndex/: text-index.idx
bufGranul~/: bufGranul2~.c  bufGranul2~.h  bufGranul2~_DSP copie.c  bufGranul2~_DSP.c  bufGranul~.help  bufGranul~.maxhelp  gen_exported.cpp
bufGranul~.mxo/Contents/: Info.plist
bufGranul~.mxo/Contents/MacOS/: bufGranul~
bufGranul~.xcodeproj/: project.pbxproj
bufGranul~.xcodeproj/project.xcworkspace/xcuserdata/charles.xcuserdatad/: UserInterfaceState.xcuserstate
bufGranul~.xcodeproj/xcuserdata/charles.xcuserdatad/xcschemes/: bufGranul~.xcscheme
bufGranul~/.svn/: entries
bufGranul~/.svn/text-base/: bufGranul2~.h.svn-base  bufGranul2~_DSP.c.svn-base
bufGranul~/Archive/: bufGranul2~.c  bufGranul2~.h  bufGranul2~_DSP.c
bufGranul~/CVS/.svn/: entries
bufGranul~/DerivedData/bufGranul~/: info.plist
bufGranul~/DerivedData/bufGranul~/Logs/Issues/: 13B37724-C191-461C-AF68-37504D7AE965.xcactivitylog  Cache.db
bufGranul~/DerivedData/bufGranul~/TextIndex/: text-index.idx
bufGranul~/bufGranul~.mxo/Contents/MacOS/: bufGranul~
bufGranul~/bufGranul~.xcodeproj/: project.pbxproj
bufGranul~/bufGranul~.xcodeproj/project.xcworkspace/xcuserdata/charles.xcuserdatad/: UserInterfaceState.xcuserstate
liveGranul~/: LiveGranul~.c
rand_dist_list/: CMakeLists.txt
synGranul~/: SynGranul~.c
(+17 files in other folders)
